--- a/src/html/home.html
+++ b/src/html/home.html
@@ -16,12 +16,12 @@
         import { collection, addDoc, getDocs, getFirestore } from 'https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore.js';
 
         const firebaseConfig = {
-            apiKey: "AIzaSyAolMdJsOZ-CbuILNkO9wrGbes10I2-ysc",
-            authDomain: "habit-tracker-22023.firebaseapp.com",
-            projectId: "habit-tracker-22023",
-            storageBucket: "habit-tracker-22023.appspot.com",
-            messagingSenderId: "802818774292",
-            appId: "1:802818774292:web:d645640da49908c67a5e01"
+            apiKey: "",
+            authDomain: "",
+            projectId: "",
+            storageBucket: "",
+            messagingSenderId: "",
+            appId: ""
         };
 
         const app = initializeApp(firebaseConfig);
